syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.uservice.resttemplate.model.persistence.serializer.v1"
};

message PetV1 {
  required string id = 1;
  required string name = 2;
}
